--- a/src/Components/Input/input.module.css
+++ b/src/Components/Input/input.module.css
@@ -1,10 +1,9 @@
-.input-group{
-width: 360px;
+.input_group{
 position: relative;
-margin: 32px;
 border: 1px solid black;
 border-radius: 8px;
-padding-right: 34px;
+padding-right: 40px;
+background-color: transparent;
 }
 
 .error{
@@ -15,25 +14,23 @@ padding-right: 34px;
     color: red !important;
 }
 
-.input-group input{
+.input_group input{
     border: none;
     background-color: transparent;
     width: 100%;
     font-size: 20px;
     padding: 12px 20px;
-    z-index: 9
 }
 
-.input-group input:focus-visible{
+.input_group input:focus-visible{
     outline: none;
-
 }
 
-.input-group:focus-within{
+.input_group:focus-within{
     border-color: green;
 }
 
-.input-group label{
+.input_group label{
     position: absolute;
     top: 0;
     bottom: 0;
@@ -42,11 +39,11 @@ padding-right: 34px;
     background-color: transparent;
     transition: top 100ms;
     cursor: text;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
-.input-group:focus-within label,
-.input-group input:not(:placeholder-shown) ~ label{
+.input_group:focus-within label,
+.input_group input:not(:placeholder-shown) ~ label{
     padding: 0 8px;
     bottom: auto;
     top: -12px;
@@ -55,6 +52,12 @@ padding-right: 34px;
     z-index: 1;
 }
 
-.input-group:focus-within label{
+.input_group:focus-within label{
     color: green;
+}
+
+.errorText{
+    font-size: 0.875rem;
+    margin: 5px;
+    color: red;
 }
